--- a/styles/task.css
+++ b/styles/task.css
@@ -10,7 +10,7 @@ body{
     padding: 10px ;
     width:100% ;
 }
-#content,#contentShow,#contentShowHalh{
+#content,#contentShow,#contentShowHalf{
     position: absolute;
     top: 58px;
     width: 100%;
@@ -22,37 +22,54 @@ body{
     margin-bottom: 200px;
     background-color: #F5F5DC;
 }
+#contentShowHalf {
+    margin-bottom:120px ;
+
+ }
 #contentShow {
     margin-bottom:20px ;
 }
-#contentShowHalh {
-    margin-bottom:100px ;
+
+#rightPanel {
+    display: block;
+    position: relative;
+    float: right;
+    width: 250px ;
+    min-width: 150px;
+    background-color: #F5F5DC;;
 }
-#footer,#footerHalph {
+#footer,#footerHalf {
     position: fixed; /* Фиксированное положение */
     height:150px ;
     left: 0; bottom: 0; /* Левый нижний угол */
     padding: 10px; /* Поля вокруг текста */
+    border-right: 4px solid grey;
 
     color: black; /* Цвет текста */
     width: 98%; /* Ширина слоя */
     display: block;
     /* border:4px solid darkolivegreen ;*/
 }
-#footerHalph {
+#footerHalf {
     height:70px ;
 }
-a.menu{
+#contentShowHalf,#footerHalf {
+    width: 70% ;
+    min-width:500px ;
+}
+a.menu,.rightMenu{
     font-size:20px;
     text-decoration: none; /* Убирает подчеркивание для ссылок */
     color:#000 ;
 }
+.rightMenu {
+    font-size:0.7em ;
+}
 
-
-a.menu:hover{
+a.menu:hover,.rightMenu:hover {
     font-style:italic;
 }
-#footer,#footerHalph,#topMenu{
+#footer,#footerHalf,#topMenu{
     background-color: #bdbdbd; /*#cccc99;*/
 }
 .programText{
