--- a/styles/formStyle-1.css
+++ b/styles/formStyle-1.css
@@ -38,7 +38,7 @@
    }
 
 .group_item:hover{
-  border: 2px dashed red;
+/*  border: 2px dashed red;
  /*  background: #786b59;*/ /* Цвет фона под ссылкой */
  /*   color: #ffe; *//* Цвет ссылки */
 }
